// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`betterer.watch should debounce runs when multiple files change 1`] = `
Array [
  " ☀️  betterer  info  💬  - ",
  "Running betterer in watch mode 🎉",
  "
   \\\\ | /     _          _   _                     
 '-.ooo.-'  | |__   ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ \\\\ / _ \\\\ __| __/ _ \\\\ '__/ _ \\\\ '__|
 .-'ooo'-.  | |_) |  __/ |_| ||  __/ | |  __/ |   
   / | \\\\    |_.__/ \\\\___|\\\\__|\\\\__\\\\___|_|  \\\\___|_|   
 
checking 2 files... 🤔
",
  "
   \\\\ | /     _          _   _                     
 '-.ooo.-'  | |__   ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ \\\\ / _ \\\\ __| __/ _ \\\\ '__/ _ \\\\ '__|
 .-'ooo'-.  | |_) |  __/ |_| ||  __/ | |  __/ |   
   / | \\\\    |_.__/ \\\\___|\\\\__|\\\\__\\\\___|_|  \\\\___|_|   
 
checked 2 files:

  <project>/fixtures/test-betterer-watch-debounce/src/index.ts
  <project>/fixtures/test-betterer-watch-debounce/src/file.ts

",
  " ☀️  betterer  info  💬  - ",
  "Stopping watch mode 👋",
]
`;

exports[`betterer.watch should run in watch mode 1`] = `
Array [
  "
   \\\\ | /     _          _   _                     
 '-.ooo.-'  | |__   ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ \\\\ / _ \\\\ __| __/ _ \\\\ '__/ _ \\\\ '__|
 .-'ooo'-.  | |_) |  __/ |_| ||  __/ | |  __/ |   
   / | \\\\    |_.__/ \\\\___|\\\\__|\\\\__\\\\___|_|  \\\\___|_|   
 ",
  " ☀️  betterer  info  💬  - ",
  "running \\"tsquery no raw console.log\\"!",
  " ☀️  betterer  succ  ✅  - ",
  "\\"tsquery no raw console.log\\" got checked for the first time! 🎉",
  " ☀️  betterer  info  💬  - ",
  "1 thing got checked. 🤔",
  " ☀️  betterer  info  💬  - ",
  "1 thing got checked for the first time! 🎉",
  " ☀️  betterer  info  💬  - ",
  "Running betterer in watch mode 🎉",
  "
   \\\\ | /     _          _   _                     
 '-.ooo.-'  | |__   ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ \\\\ / _ \\\\ __| __/ _ \\\\ '__/ _ \\\\ '__|
 .-'ooo'-.  | |_) |  __/ |_| ||  __/ | |  __/ |   
   / | \\\\    |_.__/ \\\\___|\\\\__|\\\\__\\\\___|_|  \\\\___|_|   
 
checking 1 files... 🤔
",
  "
   \\\\ | /     _          _   _                     
 '-.ooo.-'  | |__   ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ \\\\ / _ \\\\ __| __/ _ \\\\ '__/ _ \\\\ '__|
 .-'ooo'-.  | |_) |  __/ |_| ||  __/ | |  __/ |   
   / | \\\\    |_.__/ \\\\___|\\\\__|\\\\__\\\\___|_|  \\\\___|_|   
 
checked 1 files:

  <project>/fixtures/test-betterer-watch/src/index.ts
\\"tsquery no raw console.log\\" got worse. 😔
",
  "
   \\\\ | /     _          _   _                     
 '-.ooo.-'  | |__   ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ \\\\ / _ \\\\ __| __/ _ \\\\ '__/ _ \\\\ '__|
 .-'ooo'-.  | |_) |  __/ |_| ||  __/ | |  __/ |   
   / | \\\\    |_.__/ \\\\___|\\\\__|\\\\__\\\\___|_|  \\\\___|_|   
 
checking 1 files... 🤔
",
  "
   \\\\ | /     _          _   _                     
 '-.ooo.-'  | |__   ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ \\\\ / _ \\\\ __| __/ _ \\\\ '__/ _ \\\\ '__|
 .-'ooo'-.  | |_) |  __/ |_| ||  __/ | |  __/ |   
   / | \\\\    |_.__/ \\\\___|\\\\__|\\\\__\\\\___|_|  \\\\___|_|   
 
checked 1 files:

  <project>/fixtures/test-betterer-watch/src/index.ts
\\"tsquery no raw console.log\\" stayed the same. 😐
",
  "
   \\\\ | /     _          _   _                     
 '-.ooo.-'  | |__   ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ \\\\ / _ \\\\ __| __/ _ \\\\ '__/ _ \\\\ '__|
 .-'ooo'-.  | |_) |  __/ |_| ||  __/ | |  __/ |   
   / | \\\\    |_.__/ \\\\___|\\\\__|\\\\__\\\\___|_|  \\\\___|_|   
 
checking 1 files... 🤔
",
  "
   \\\\ | /     _          _   _                     
 '-.ooo.-'  | |__   ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ \\\\ / _ \\\\ __| __/ _ \\\\ '__/ _ \\\\ '__|
 .-'ooo'-.  | |_) |  __/ |_| ||  __/ | |  __/ |   
   / | \\\\    |_.__/ \\\\___|\\\\__|\\\\__\\\\___|_|  \\\\___|_|   
 
checked 1 files:

  <project>/fixtures/test-betterer-watch/src/index.ts
\\"tsquery no raw console.log\\" got better! 😍
",
  " ☀️  betterer  info  💬  - ",
  "Stopping watch mode 👋",
]
`;
